@@ -46,12 +46,14 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {LINE_BEGIN,"\033|^"},
    {LINE_BEGIN,"\033|a"},
    {LINE_BEGIN,"\033|A"},
+   {LINE_BEGIN,"\033[1~"},    // redhat xterm
    {LINE_END,"$kend"},
    {LINE_END,"$kc1"},
    {LINE_END,"$kll"},
    {LINE_END,"\033|\\$"},
    {LINE_END,"\033|e"},
    {LINE_END,"\033|E"},
+   {LINE_END,"\033[4~"},      // redhat xterm
 //    {TEXT_BEGIN,"$kBEG"},
 //    {TEXT_BEGIN,"$kHOM"},
    {TEXT_BEGIN,"\033|$kbeg"},
